# conscious_ai

./: README.md  pyproject.toml
conscious_ai/: __init__.py  agent.py  analyze.py  config.py  dashboard.py  deepseek.py  events.py  main.py  memory.py  seeds.py  sensors.py  state.py
tests/: test_memory.py  test_seeds.py  test_sensors.py  test_state.py
